--- a/ipv8-jvm/build.gradle
+++ b/ipv8-jvm/build.gradle
@@ -15,7 +15,7 @@ dependencies {
     api 'com.google.code.gson:gson:2.8.6'
     testImplementation 'com.google.code.findbugs:jsr305:3.0.2'
     api 'org.bitcoinj:bitcoinj-core:0.15.10'
-    implementation 'com.google.guava:guava:31.0-jre'
+    api 'com.google.guava:guava:31.0-jre'
 }
 
 
