--- a/demo-android/build.gradle
+++ b/demo-android/build.gradle
@@ -51,7 +51,7 @@ repositories {
 }
 
 dependencies {
-    implementation project(':ipv8-android')
+//    implementation project(':ipv8-android')
 
     // AndroidX
     implementation 'androidx.appcompat:appcompat:1.1.0'
