--- a/demo-jvm/build.gradle
+++ b/demo-jvm/build.gradle
@@ -5,7 +5,7 @@ apply plugin: 'kotlin'
 mainClassName = 'nl.tudelft.ipv8.jvm.demo.ApplicationKt'
 
 dependencies {
-    implementation project(':ipv8-jvm')
+//    implementation project(':ipv8-jvm')
 
     // Kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
