--- a/demo-jvm/build.gradle
+++ b/demo-jvm/build.gradle
@@ -13,6 +13,8 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.3'
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
 
+    implementation 'org.java-websocket:Java-WebSocket:1.5.2'
+
     // Logging
     implementation 'io.github.microutils:kotlin-logging:1.7.7'
 
