--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ build
 .cxx
 /.idea/
 demo-jvm/src/main/java/nl/tudelft/ipv8/jvm/demo/coin/wallet-*
+./demo-jvm/src/main/java/nl/tudelft/ipv8/jvm/demo/wallets/*
